--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <title>Document</title>
     </head>
     <body>
-        <h1>Hello World </h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.<br> Soluta corrupti quis, sequi praesentium, laborum sed fuga, ea debitis ipsum deleniti <br>dignissimos excepturi omnis unde perferendis corporis temporibus vitae delectus illo! Esse temporibus,<br> maiores voluptate numquam fugit molestiae illo, magnam vel velit qui ea commodi <br>repellat quam in reiciendis quia doloremque.</p>
+        <h1 style="font-size: 50px;text-align: center;">Hello World </h1>
+        <p style="color: blue; background-color: brown;text-align: center;">Lorem ipsum dolor sit amet consectetur adipisicing elit.<br> Soluta corrupti quis, sequi praesentium, laborum sed fuga, ea debitis ipsum deleniti <br>dignissimos excepturi omnis unde perferendis corporis temporibus vitae delectus illo! Esse temporibus,<br> maiores voluptate numquam fugit molestiae illo, magnam vel velit qui ea commodi <br>repellat quam in reiciendis quia doloremque.</p>
         <hr>
         <pre>
             "    123"
