--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
             "    123"
             /*-9"
         </pre>
+        <h1>Mathmatical Rules</h1>
+        <p style="color: red;text-align: center;">
+            (a+b)<sup>2</sup>=a<sup>2</sup>+2ab+b<sup>2</sup><br>
+            Water: H<sub>2</sub>O
+        </p>
+        <p style="background-color: aqua;"><b>This is Bold</b><br><u>This is UnderLine</u><br><del>This is Deleted</del><br><i>This is Italic</i></p>
        
     </body>
 </html>
