--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Document</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <h1 style="font-size: 50px;text-align: center;">Hello World </h1>
@@ -17,6 +18,14 @@
             Water: H<sub>2</sub>O
         </p>
         <p style="background-color: aqua;"><b>This is Bold</b><br><u>This is UnderLine</u><br><del>This is Deleted</del><br><i>This is Italic</i></p>
+        <p>
+            <q>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Qui laudantium numquam quae possimus perferendis at porro natus pariatur atque veritatis.</q>
+        </p>
+        <abbr title="Hyper Text Language">Html</abbr>
+        <address>Ruhul Amin<br>
+            Dhaka 1212
+        </address>
+        <!-- Commad Line Ctrl+/  -->
        
     </body>
 </html>
