--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
             Dhaka 1212
         </address>
         <!-- Commad Line Ctrl+/  -->
-       
+        <a href="newfile.html" target="_blank">Go to the second Htlm Page</a><br>
+        <a href="http://youtube.com" target="_blank">Go to the youtube</a><br>
+        <a href="include/thirdfile.html">Go to the Third Htlm Page</a><br>
+        <img src="images/image1.png" alt="Profile Image" style="width: 720px; height: 420px;">
     </body>
 </html>
