--- a/newfile.html
+++ b/newfile.html
@@ -46,5 +46,24 @@
             
         </tr>
     </table>
+    <ul>
+        <li>Mango</li>
+        <li>Orange</li>
+        <li>Fruit</li>
+        <li>Banna</li>
+    </ul>
+    <ol>
+        <li>Mango</li>
+        <li>Orange</li>
+        <li>Fruit</li>
+        <li>Banna</li>
+    </ol>
+    <ol type="A">
+        <li>Mango</li>
+        <li>Orange</li>
+        <li>Fruit</li>
+        <li>Banna</li>
+    </ol>
+
 </body>
 </html>
