--- a/index.html
+++ b/index.html
@@ -29,6 +29,20 @@
         <a href="newfile.html" target="_blank">Go to the second Htlm Page</a><br>
         <a href="http://youtube.com" target="_blank">Go to the youtube</a><br>
         <a href="include/thirdfile.html">Go to the Third Htlm Page</a><br>
-        <img src="images/image1.png" alt="Profile Image" style="width: 720px; height: 420px;">
+        <img src="images/image1.png" alt="Profile Image" style="width: 720px; height: 420px;"><br>
+
+        <!-- Iframe -->
+        <iframe src="newfile.html" height="400px" width="800px"></iframe>
+
+        <!-- JavaScript -->
+        <p id="pTagg">Hello How Are You?</p>
+        <button type="button" onclick="myFunction()">Click Here</button>
+        <script>
+            function myFunction() {
+                document.getElementById("pTagg").innerHTML="I am fine!";
+                
+            }
+        </script>
+
     </body>
 </html>
