--- a/newfile.html
+++ b/newfile.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <p>This is Table Page</p>
+    <!-- Table -->
     <table>
         <caption>Mark Sheet Of Class One</caption>
         <tr>
@@ -46,24 +47,32 @@
             
         </tr>
     </table>
+    <!-- Un Order List -->
     <ul>
         <li>Mango</li>
         <li>Orange</li>
         <li>Fruit</li>
         <li>Banna</li>
     </ul>
+    <!-- Order List -->
     <ol>
         <li>Mango</li>
         <li>Orange</li>
         <li>Fruit</li>
         <li>Banna</li>
     </ol>
+    <!-- Order List With Type -->
     <ol type="A">
         <li>Mango</li>
         <li>Orange</li>
         <li>Fruit</li>
         <li>Banna</li>
     </ol>
+    <!-- Id In Style Css Use # -->
+    <p id="fristp">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus odio mollitia maxime autem non iste voluptatum explicabo. Itaque doloremque deleniti blanditiis illum maxime. Magni dolorum reiciendis modi? Eius, adipisci sequi?</p>
+   
+    <!-- Class In Style Css Use . -->
+    <p class="secondTag">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit molestias dolore sapiente quidem dolorem! Animi tempore laborum sunt eligendi iste, reiciendis nihil obcaecati facilis vel. Hic iste sequi porro molestias.</p>
 
 </body>
 </html>
